# kindle-lock

./: .dockerignore  .env.docker.example  .env.example  .gitignore  HANDOFF.md  Makefile  README.md  docker-compose.yml  kindle_lock_spec.md  pyproject.toml
KindleLock/: README.md  project.yml
KindleLock/KindleAPITester/: ContentView.swift  KindleAPITesterApp.swift
KindleLock/KindleLock/: KindleLock.entitlements  KindleLockApp.swift
KindleLock/KindleLock.xcodeproj/: project.pbxproj
KindleLock/KindleLock/Models/: AppState.swift  ReadingProgress.swift
KindleLock/KindleLock/Services/: DebugLogger.swift  KeychainService.swift  KindleAPIService.swift  KindleAuthService.swift  NotificationService.swift  SettingsStore.swift  ShieldManager.swift
KindleLock/KindleLock/Shared/: Constants.swift
KindleLock/ShieldAction/: Info.plist  ShieldActionExtension.swift
KindleLock/ShieldConfiguration/: Info.plist  SharedTypes.swift  ShieldConfiguration.entitlements  ShieldConfigurationExtension.swift
archived/: Makefile  requirements.txt
archived/docker/: Dockerfile  start.sh
archived/docs/: DOCKER_DEPLOYMENT.md
archived/scripts/: install_service.sh  login.py
archived/src/: __init__.py  config.py  main.py  scraper.py
archived/systemd/: read-to-unlock-scraper.service
archived/tests/: conftest.py  test_api.py
docker/: Dockerfile.novnc  tailscale-serve.json
scripts/: setup.sh
src/: database.py  main.py  models.py  scraper.py
systemd/: read-to-unlock-scraper.timer  read-to-unlock.service
tests/: __init__.py  test_database.py
(+15 files in other folders)
